--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 server.port=8080
-kafka.server=localhost:9092
-kafka.group.id=server.broadcast
+kafka.server={{KAFKA_SERVER}}
+kafka.group.id=main
 kafka.producer.id=starship
